.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multivac-agents-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multivac-agents
  template:
    metadata:
      labels:
        app: multivac-agents
    spec:
      containers:
        - name: multivac-agents
          image: mvacstudio/multivac-agents:latest
          imagePullPolicy: Always
          ports:
            - name: http-port
              containerPort: 8080
