.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multivac-agents-service
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: multivac-agents
