.kube/ingress.yaml
### NOT NORMALLY EXPOSED TO THE PUBLIC. TYPICALLY HANDLED BY THE FEDERATION ###

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multivac-agents-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefix@kubernetescrd

spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - api.ngent.io
      secretName: api-ngent-io-tls
  rules:
    - host: api.ngent.io
    - http:
        paths:
          - path: /agents
            pathType: Prefix
            backend:
              service:
                name: multivac-agents-services
                port:
                  number: 80
